--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <link rel="stylesheet" href="style.css" >
   </head>
   <body>
-
+    <header>
+      <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-myt-logo.jpg" >
+      <span class="logo">My Times</span>
+      <nav>
+        <span>World</span><span>U.S.</span><span>Tech</span><span>Science</span>
+      </nav>
+    </header>
   </body>
 </html>
