--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
   </head>
   <body>
     <header>
-      <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-myt-logo.jpg" >
-      <span class="logo">My Times</span>
+      <div class="logo">
+        <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-myt-logo.jpg" >
+        <span>My Times</span>
+      </div>
       <nav>
         <span>World</span><span>U.S.</span><span>Tech</span><span>Science</span>
       </nav>
