--- a/index.html
+++ b/index.html
@@ -15,5 +15,20 @@
         <span>World</span><span>U.S.</span><span>Tech</span><span>Science</span>
       </nav>
     </header>
+
+    <div class="main">
+      <div class="column large">
+        <div class="story headline">
+          <span>Mother of Three Buys Tuna Steak at Phish Concert. Leaves, "Feeling Funny."</span>
+        </div>
+        <div class="stories">
+        </div>
+      </div>
+      <div class="column medium">
+      </div>
+      <div class="column small">
+      </div>
+
+    </div>
   </body>
 </html>
