--- a/index.html
+++ b/index.html
@@ -28,18 +28,22 @@
         </div>
         <div class="stories">
           <div class="story">
-            <h1>Orca Spends Vacation at Land World Puget</h1>
-            <p>PUGET, SO - Sed felis elit, faucibus et ipsum vel, vehicula ultrices purus. Sed congue odio vitae malesuada rhoncus. Integer vitae nisi pulvinar ante accumsan...</p>
-          </div>
-          <div class="image">
-            <span>Earth Spins Backwards for 2017</span>
+            <div class="text">
+              <h2>Orca Spends Vacation at Land World Puget</h2>
+              <p class="narrative">PUGET, SO - Sed felis elit, faucibus et ipsum vel, vehicula ultrices purus. Sed congue odio vitae malesuada rhoncus. Integer vitae nisi pulvinar ante accumsan...</p>
+            </div>
+            <div class="image">
+              <span>Earth Spins Backwards for 2017</span>
+            </div>
           </div>
           <div class="story">
-            <h1>Burger for Breakfast: How Early is too Early?</h1>
-            <p>Mew York, MY—Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque id quam facilisis, ultrices ante ut, rutrum enim. Praesent eu nisl erat.</p>
-          </div>
-          <div class="image">
+            <div class="text">
+              <h2>Burger for Breakfast: How Early is too Early?</h2>
+              <p class="narrative">Mew York, MY—Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque id quam facilisis, ultrices ante ut, rutrum enim. Praesent eu nisl erat.</p>
+            </div>
+            <div class="image">
               <span>Earth Spins Backwards for 2017</span>
+            </div>
           </div>
         </div>
       </div>
