--- a/index.html
+++ b/index.html
@@ -64,6 +64,11 @@
       </div>
       <!-- Third Column -->
       <div class="column small">
+        <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-news-bite.png">
+        <div class="news">
+          <h3>NEWS BITES</h3>
+          <span class="bites">Cat Emoji Goes Viral</span> <span class="bites">Buy Youtube Views </span><span class="bites">Home Business Advertising Ideas</span> <span class="bites">Advertising Internet Online</span> <span class="bites">Illustration in Marketing Materials</span> <span class="bites">Finally a Top Secret Way You Can</span>
+        </div>
       </div>
   </body>
 </html>
