--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
               <p class="narrative">Mew York, MY—Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque id quam facilisis, ultrices ante ut, rutrum enim. Praesent eu nisl erat.</p>
             </div>
             <div class="image hipster">
-              <span>Earth Spins Backwards for 2017</span>
+              <span>Research Shows Cameras Erase Memory</span>
             </div>
           </div>
         </div>
