Add final project edits.

--- a/index.html
+++ b/index.html
@@ -70,5 +70,14 @@
           <span class="bites">Cat Emoji Goes Viral</span> <span class="bites">Buy Youtube Views </span><span class="bites">Home Business Advertising Ideas</span> <span class="bites">Advertising Internet Online</span> <span class="bites">Illustration in Marketing Materials</span> <span class="bites">Finally a Top Secret Way You Can</span>
         </div>
       </div>
+    </div>
+    <!-- Footer -->
+    <footer>
+      <div class="bottom">
+        <span class="title">MY Times</span> <span class="menu">World</span> <span class="menu">U.S</span> <span class="menu">Tech</span> <span class="menu">Science</span>
+      </div>
+      <div>&copy; 2016, My Times (A Division of Codeacademy bite)
+      </div>
+    </footer>
   </body>
 </html>
